2A/05_Projet_GL/src/test/deca/syntax/valid/HelloWorld/09_Printx.deca
// Description:
//    Programme avec printx simple.
//
// Resultats:
//    Un print
//
// Historique:
//    cree le 20/12/2023

{
    printx("Un print");
}